[cmake] Modern cmake targets, bump cmake >3.11
- Bump cmake requirement to >3.11 to allow linking PCL with modern cmake
targets
- Add cmake scripts to create interface targets for cmake
- Use imported targets
- Find custom assimp/PCL dependencies when importing mesh_sampling
  Note: for now this does not use add_required_dependency as it does not
  support using custom Find* scripts, and the dependencies are manually
  handled. It would be nice in the future to modify the cmake submodules
  to support that use-case

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,10 +1,12 @@
 add_library(mesh_sampling SHARED
   weighted_random_sampling.cpp
   )
-pkg_config_use_dependency(mesh_sampling assimp)
-target_link_libraries(mesh_sampling ${PCL_COMMON_LIBRARIES} ${PCL_IO_LIBRARIES})
+target_link_libraries(mesh_sampling PUBLIC mesh_sampling::assimp)
+target_link_libraries(mesh_sampling PUBLIC mesh_sampling::PCL)
+target_include_directories(mesh_sampling PUBLIC $<BUILD_INTERFACE:${CMAKE_SOURCE_DIR}/include> $<INSTALL_INTERFACE:include>)
 
 install(TARGETS mesh_sampling 
+  EXPORT "${TARGETS_EXPORT_NAME}"
   RUNTIME DESTINATION bin
   LIBRARY DESTINATION lib
   ARCHIVE DESTINATION lib)
