--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -17,68 +17,29 @@ on:
   push:
     branches:
       - master
-    tags:
-      - v*
 
 jobs:
-  # For a given tag vX.Y.Z, this checks:
-  # - set(PROJECT_VERSION X.Y.Z) in CMakeLists.txt
-  # - version X.Y.Z in debian/changelog
-  # If these checks fail, the tag is automatically deleted
-  #
-  # This job does not run on the master branch
-  check-tag:
-    runs-on: ubuntu-18.04
-    steps:
-    - uses: actions/checkout@v1
-      with:
-        submodules: recursive
-      if: github.ref != 'refs/heads/master'
-    - name: Check version coherency
-      run: |
-        set -x
-        export VERSION=`echo ${{ github.ref }} | sed -e 's@refs/tags/v@@'`
-        echo "::set-env name=REJECTION::PROJECT_VERSION in CMakeLists.txt does not match tag"
-        grep -q "set(PROJECT_VERSION ${VERSION})" CMakeLists.txt
-        echo "::set-env name=REJECTION::Upstream version in debian/changelog does not match tag"
-        head -n 1 debian/changelog | grep -q "spacevecalg (${VERSION}"
-        echo "::set-env name=REJECTION::"
-        export TAG=`echo ${{ github.ref }} | sed -e 's@refs/tags/@@'`
-        echo "::set-env name=RELEASE_TAG::${TAG}"
-      if: github.ref != 'refs/heads/master'
-    - name: Delete tag
-      run: |
-        set -x
-        curl --header 'authorization: Bearer ${{ secrets.GITHUB_TOKEN }}' -X DELETE https://api.github.com/repos/${{ github.repository }}/git/${{ github.ref }}
-      if: failure()
-    - name: Notify tag deletion
-      uses: archive/github-actions-slack@master
-      with:
-        slack-bot-user-oauth-access-token: ${{ secrets.SLACK_BOT_TOKEN }}
-        slack-channel: '#ci'
-        slack-text: >
-          Tag *${{ github.ref }}* in *${{ github.repository }}* was deleted:
-            ${{ env.REJECTION}}
-      if: failure()
-    - name: Create release
-      uses: jrl-umi3218/github-actions/create-release@master
-      with:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        tag: ${{ env.RELEASE_TAG }}
-      if: github.ref != 'refs/heads/master'
   # This job build binary packages for Ubuntu
   build-packages:
-    needs: check-tag
     strategy:
       fail-fast: false
       matrix:
-        dist: [xenial, bionic, focal]
-        arch: [i386, amd64]
+        dist: [focal]
+        arch: [amd64]
     runs-on: ubuntu-18.04
     steps:
     - uses: actions/checkout@v1
+    - name: Prepare recipe
+      run: |
+        set -x
+        cp .github/workflows/mesh_sampling.recipe /tmp/mesh_sampling.recipe
+        export REF=`echo ${{ github.ref }} | sed -e 's@refs/[a-z]*/@@'`
+        sed -i "s#@REF@#${REF}#" /tmp/mesh_sampling.recipe
+        echo "Prepared recipe"
+        echo "###############"
+        cat /tmp/mesh_sampling.recipe
     - name: Build package
-      uses: jrl-umi3218/github-actions/build-package@master
+      uses: jrl-umi3218/github-actions/build-package-native@master
       with:
         dist: ${{ matrix.dist }}
         arch: ${{ matrix.arch }}
@@ -94,21 +55,10 @@ jobs:
       max-parallel: 1
       fail-fast: false
       matrix:
-        dist: [xenial, bionic, focal]
-        arch: [i386, amd64]
+        dist: [focal]
+        arch: [amd64]
     runs-on: ubuntu-18.04
     steps:
-    - name: Set upload parameters
-      run: |
-        export REF=`echo ${{ github.ref }} | sed -e 's@refs/[a-z]*/@@'`
-        if [ $REF == "master" ]
-        then
-          echo "::set-env name=BINTRAY_REPO::ppa-head"
-          echo "::set-env name=BINTRAY_VERSION::HEAD"
-        else
-          echo "::set-env name=BINTRAY_REPO::ppa-release"
-          echo "::set-env name=BINTRAY_VERSION::${REF}"
-        fi
     - name: Download packages
       uses: actions/download-artifact@v1
       with:
@@ -119,13 +69,13 @@ jobs:
         dist: ${{ matrix.dist }}
         arch: ${{ matrix.arch }}
         subject: arntanguy
-        repo: ${{ env.BINTRAY_REPO }}
+        repo: ppa-head 
         package: |
-          name: mesh_sampling
-          desc: "mesh_sampling Convert CAD models to PCL pointcloud"
+          name: mesh-sampling
+          desc: "mesh-sampling Convert CAD models to PCL pointcloud"
           licenses: [BSD 2-Clause]
           vcs_url: https://github.com/arntanguy/mesh_sampling
-        version: ${{ env.BINTRAY_VERSION }}
+        version: 1.0.0 
         path: packages-${{ matrix.dist }}-${{ matrix.arch }}
         BINTRAY_API_KEY: ${{ secrets.BINTRAY_API_KEY }}
         GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
