--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -14,7 +14,7 @@ install(TARGETS mesh_sampling
 install(
   DIRECTORY ${CMAKE_SOURCE_DIR}/include/ DESTINATION include)
 
-add_executable(mesh_sampling_bin example.cpp)
+add_executable(mesh_sampling_bin mesh_sampling.cpp)
 target_link_libraries(mesh_sampling_bin mesh_sampling)
 set_target_properties(mesh_sampling_bin PROPERTIES OUTPUT_NAME mesh_sampling)
 
