--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -15,7 +15,8 @@ install(
   DIRECTORY ${CMAKE_SOURCE_DIR}/include/ DESTINATION include)
 
 add_executable(mesh_sampling_bin mesh_sampling.cpp)
-target_link_libraries(mesh_sampling_bin mesh_sampling)
+target_link_libraries(mesh_sampling_bin PUBLIC mesh_sampling)
+target_link_libraries(mesh_sampling_bin PUBLIC Boost::program_options)
 set_target_properties(mesh_sampling_bin PROPERTIES OUTPUT_NAME mesh_sampling)
 
 install(TARGETS mesh_sampling_bin
