Support both lower/upper case extensions

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -19,7 +19,7 @@ install(
 
 add_executable(mesh_sampling_bin mesh_sampling.cpp)
 target_link_libraries(mesh_sampling_bin PUBLIC mesh_sampling)
-target_link_libraries(mesh_sampling_bin PUBLIC Boost::program_options)
+target_link_libraries(mesh_sampling_bin PUBLIC Boost::program_options Boost::filesystem)
 set_target_properties(mesh_sampling_bin PROPERTIES OUTPUT_NAME mesh_sampling)
 
 install(TARGETS mesh_sampling_bin
