--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,7 +27,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-18.04]
+        os: [ubuntu-16.04, ubuntu-18.04]
         build-type: [RelWithDebInfo, Release]
         compiler: [gcc, clang]
 
