[ci] Test consuming mesh_sampling library

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -55,3 +55,11 @@ jobs:
       with:
         compiler: ${{ matrix.compiler }}
         build-type: ${{ matrix.build-type }}
+    - name: Test consumption
+      uses:  arntanguy/github-actions/build-cmake-project@topic/skip-install
+      with:
+        compiler: ${{ matrix.compiler }} 
+        build-type: Release 
+        project-dir: tests/test_mesh_sampling
+        skip-install: "true"
+
