--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -24,21 +24,15 @@ jobs:
     runs-on: ubuntu-18.04
     steps:
     - uses: actions/checkout@v1
-    - name: Prepare recipe
-      run: |
-        set -x
-        cp .github/workflows/mesh_sampling.recipe /tmp/mesh_sampling.recipe
-        export REF=`echo ${{ github.ref }} | sed -e 's@refs/[a-z]*/@@'`
-        sed -i "s#@REF@#${REF}#" /tmp/mesh_sampling.recipe
-        echo "Prepared recipe"
-        echo "###############"
-        cat /tmp/mesh_sampling.recipe
+      with:
+        submodules: recursive
     - name: Build package
-      uses: arntanguy/github-actions/build-package@topic/cmake3.11
+      uses: jrl-umi3218/github-actions/build-package-native@master
       with:
         dist: ${{ matrix.dist }}
         arch: ${{ matrix.arch }}
-        recipe: /tmp/mesh_sampling.recipe
+        other-mirrors: 'https://apt.kitware.com/ubuntu'
+        other-gpg-keys: 'DE19EB17684BA42D'
     - uses: actions/upload-artifact@v1
       with:
         name: packages-${{ matrix.dist }}-${{ matrix.arch }}
@@ -50,28 +44,26 @@ jobs:
       max-parallel: 1
       fail-fast: false
       matrix:
-        dist: [bionic,focal]
+        dist: [xenial, bionic,focal]
         arch: [amd64]
     runs-on: ubuntu-18.04
-    if: github.ref == 'refs/heads/master' && github.repository == 'arntanguy/mesh_sampling'
+    if: github.ref == 'refs/heads/master'
     steps:
     - name: Download packages
       uses: actions/download-artifact@v1
       with:
         name: packages-${{ matrix.dist }}-${{ matrix.arch }}
-    - name: Upload
+    - name: Upload to multi-contact-head
       uses: jrl-umi3218/github-actions/upload-package@master
       with:
-        dist: ${{ matrix.dist }}
-        arch: ${{ matrix.arch }}
-        subject: arntanguy
-        repo: ppa-head
-        package: |
-          name: mesh-sampling
-          desc: "mesh-sampling Convert CAD models to PCL pointcloud"
-          licenses: [BSD 2-Clause]
-          vcs_url: https://github.com/arntanguy/mesh_sampling
-        version: 1.0.0
+        dist: ubuntu/${{ matrix.dist }}
+        repo: mc-rtc/head
         path: packages-${{ matrix.dist }}-${{ matrix.arch }}
-        BINTRAY_API_KEY: ${{ secrets.BINTRAY_API_KEY }}
-        GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
+        CLOUDSMITH_API_KEY: ${{ secrets.CLOUDSMITH_API_KEY }}
+    - name: Upload to multi-contact-release
+      uses: jrl-umi3218/github-actions/upload-package@master
+      with:
+        dist: ubuntu/${{ matrix.dist }}
+        repo: mc-rtc/stable
+        path: packages-${{ matrix.dist }}-${{ matrix.arch }}
+        CLOUDSMITH_API_KEY: ${{ secrets.CLOUDSMITH_API_KEY }}
