--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,13 +27,9 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-16.04, ubuntu-18.04, ubuntu-20.04]
+        os: [ubuntu-18.04, ubuntu-20.04]
         build-type: [Debug, RelWithDebInfo]
         compiler: [gcc, clang]
-        exclude:
-          # ABI linking issues with stock PCL
-          - os: ubuntu-16.04
-            compiler: clang
 
     runs-on: ${{ matrix.os }}
     steps:
